Modifications for production use
- Adds user/groups to the image /etc/passwd and group files.
- Sets a generic entrypoint with custom CMD to simplify shelling in.
- Adds a secrets volume to make development easier.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,10 @@
-version: "3.8"
-
 services:
   bfs:
     build: .
     image: containers.lib.berkeley.edu/lap/bfs/development:latest
     init: yes
     volumes:
-      - ./:/opt/app-root/src:delegated
-    ports:
-      - 587:587
-    env_file:
-      - run/secrets/mailer.sh
-secrets:
-  mailer:
-    file: mailer.txt
+      - ./:/opt/app-root/src
+      - ./secrets:/run/secrets:ro
+
+version: "3.8"
