Wrap bfs in a Ruby command-line tool
Replaces the shell "wrapper.sh" script with a Ruby command-line tool
interface using the thor library. The underlying functionality is unchanged,
but the code has been reformatted to make it callable from Ruby without having
to shell out. See the updated README for details on how to invoke the app.

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,22 @@
+# Convoluted gitkeep setting to keep the data directory
+# structure intact without tracking its contents.
 data/*
-!/data/.keep
-data/**/
-!data/**/.keep
+!data/.keep
+!data/processed
+data/processed/*
+!data/processed/.keep
+!data/rejected
+data/rejected/*
+!data/rejected/.keep
+!data/invoicing
+data/invoicing/*
+!data/invoicing/.keep
+!data/invoicing/pay
+data/invoicing/pay/*
+!data/invoicing/pay/.keep
+!data/invoicing/pay/processed
+data/invoicing/pay/processed/*
+!data/invoicing/pay/processed/.keep
 
 vendor
 .bundle
