using ruby3.3-slim for image, updated README, using app name for service instead of bfs now
took out some unnecessary installs in Dockerfile, updated README

using multi-target for images

set working directory for production docker build

Adding entrypoint to production build

moved some common dev and production settings to base in Dockerfile, fixed some annotation warning

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,8 @@
 services:
   app:
-    build: .
+    build:
+      context: .
+      target: development 
     command: watch --interval 10
     init: true 
     environment:
