fixed rebase issue
fixed merge conflicts

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,8 +13,8 @@ services:
       - ./:/opt/app:rw
       - ./secrets:/run/secrets:ro
     secrets:
-      - source: SSH_KEY 
-        target: /opt/app/.ssh/id_rsa
+      - source: SSH_KEY
+        target: /home/bfs/.ssh/id_rsa
         uid: "40061"
         gid: "40061"
         mode: 0400
